--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.23.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "swiper": "^11.2.6"
@@ -33,6 +34,8 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pages": "^0.33.1",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
