--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "vite-plugin-pages": "^0.33.1",
+    "vite-plugin-sitemap": "^0.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
